2013-12-07  Maxim Kuvyrkov  <maxim@kugelworks.com>

	* config/linux.c (linux_has_ifunc_p): Use correct test.

2013-12-07  Maxim Kuvyrkov  <maxim@kugelworks.com>

	* config/linux.c (linux_android_has_ifunc_p): Rename to
	linux_has_ifunc_p.
	(linux_android_libc_has_function): Rename to linux_libc_has_function.
	* config/linux-protos.h (linux_android_has_ifunc_p,)
	(linux_android_libc_has_function): Update declarations.
	* config/linux.h, config/linux-android.h, config/alpha/linux.h,
	* config/rs6000/linux.h, config/rs6000/linux64.h: Update.

2013-12-07  Maxim Kuvyrkov  <maxim@kugelworks.com>

	* linux-android.c: Rename to linux.c.
	* t-linux-android: Rename to t-linux.  Update references
	to linux-android.c
	* config.gcc: Update references to t-linux-android and linux-android.o.

2013-12-07  Alan Modra  <amodra@gmail.com>

	* config/rs6000/rs6000.md (bswapdi2_32bit): Remove ?? from r->r
	alternative.

2013-12-07  Ralf Corsépius  <ralf.corsepius@rtems.org>

	* config.gcc (microblaze*-*-rtems*): Add TARGET_BIG_ENDIAN_DEFAULT.

2013-12-06  Vladimir Makarov  <vmakarov@redhat.com>

	* config/rs6000/rs600.md (*bswapdi2_64bit): Remove ?? from the
	constraint.

2013-12-06  Caroline Tice  <cmtice@google.com>

	Submitting patch from Stephen Checkoway, s@cs.jhu.edu
	* vtable-verify.c (verify_bb_vtables): Replace all uses of verified
	vtable pointer with the results of the verification call, rather than
	only the uses in the next statement.

2013-12-06  Andrew Pinski  <apinski@cavium.com>

	PR target/59092
	* config/aarch64/aarch64.md (trap): New pattern.

2013-12-06  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/59388
	* tree-ssa-reassoc.c (update_range_test): If op == range->exp,
	gimplify tem after stmt rather than before it.

	* tree-data-ref.c (struct data_ref_loc_d): Replace pos field with ref.
	(get_references_in_stmt): Don't record operand addresses, but
	operands themselves.
	(find_data_references_in_stmt, graphite_find_data_references_in_stmt):